Public/stylesheets/package.scss
/* -------------------------------------------------------------------------
  Individual package pages.
---------------------------------------------------------------------------- */

.package {
  h2 {
    margin: 0;
    padding: 0;
  }

  p.summary {
    margin-top: 0;
    font-size: 19px;
  }

  article.details {
    h3 {
      margin: 0;
      padding: 0;
    }

    section.main_metadata {
      ul {
        padding: 0;
        margin: 10px 0;
        display: grid;
        grid-template-columns: 0.5fr 0.5fr;
        grid-auto-flow: row;
        gap: 15px;

        li {
          padding: 0 0 0 30px;
          list-style: outside none none;
          background-size: 18px;
          background-repeat: no-repeat;
          background-position: top 2px left;
        }

        li.history {
          grid-column-start: span 2;
          background-image: var(--image-clock);
        }

        li.activity {
          grid-column-start: span 2;
          background-image: var(--image-speech-bubble);
        }

        li.license {
          background-image: var(--image-osi);

          &.warning {
            background-image: var(--image-warning);
          }

          &.error {
            background-image: var(--image-error);
          }
          .no_license {
            color: var(--lozenge-red-background);
          }

          #license_more_info {
            display: block;
            font-size: 11px;
          }
        }

        li.stars {
          background-image: var(--image-star);
        }

        li.libraries {
          background-image: var(--image-box);
        }

        li.executables {
          background-image: var(--image-prompt);
        }
      }
    }

    section.sidebar_links {
      ul {
        margin: 0;
        padding: 0;
        list-style: none;
        display: grid;
        gap: 5px;

        li > a {
          display: block;
          padding: 5px;
          padding-left: 10px;
          border-left: 3px var(--light-grey) solid;
          background-color: var(--very-very-light-grey);

          &:hover {
            background-color: var(--very-light-grey);
          }
        }
      }
    }

    section.sidebar_versions {
      ul {
        padding: 0;
        list-style: none;
        display: grid;
        gap: 15px;

        li {
          display: flex;
          flex-direction: column;
          padding: 5px 10px 6px 10px;
          background-color: var(--very-very-light-grey);
          border-left: 3px var(--grey) solid;

          strong {
            font-size: 14px;
          }

          &.stable {
            border-left-color: var(--stable-text);
          }

          &.beta {
            border-left-color: var(--beta-text);
          }

          &.branch {
            border-left-color: var(--branch-text);
          }
        }
      }
    }
  }

  @media screen and (max-width: $mobile-breakpoint) {
    article.details {
      section.main_metadata {
        order: 2;

        ul {
          grid-template-columns: 1fr;

          li.history {
            grid-column-start: 1; // Only needed as this was explicitly specified.
          }

          li.activity {
            grid-column-start: 1; // Only needed as this was explicitly specified.
          }
        }
      }

      section.sidebar_links {
        order: 1;
      }

      section.main_compatibility {
        order: 2;
      }

      section.sidebar_versions {
        order: 1;
      }
    }
  }
}

/* Branches */

span.stable,
span.beta,
span.branch {
  font-weight: 600;
  padding-right: 18px;
  background-size: 14px;
  background-repeat: no-repeat;
  background-position: top 2px right;
}

span.stable {
  color: var(--stable-text);
  background-image: var(--image-stable);
}

span.beta {
  color: var(--beta-text);
  background-image: var(--image-beta);
}

span.branch {
  color: var(--branch-text);
  background-image: var(--image-branch);
}

.package_list {
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;

  li {
    margin: 5px 0;
    display: flex;
    flex-direction: column;
    flex-basis: 49%;
    background-color: var(--package-list-background);

    a {
      padding: 10px;

      h4 {
        margin: 0;
      }

      p {
        margin: 5px 0;
        color: var(--page-text);
      }
    }
  }

  @media screen and (max-width: $mobile-breakpoint) {
    li {
      flex-basis: 100%;
    }
  }
}

